src/scss/page/auth.scss
@import "~scss/_vars";

$colorSecondary: #8d8d8d;

html.bodyIndex, html.bodyAuth {
	body { background: #060606 !important; color: $colorSecondary; overflow: hidden; }
}

html.bodyAuthOnboard, html.bodyAuthLogin, html.bodyAuthDeleted {
	#popupConfirm-innerWrap { background: #252525; min-width: 700px }
	#popupConfirm-innerWrap {
		.content { text-align: left; }

		h1 { font-size: 18px; margin-bottom: 16px; }
		h2 { font-size: 14px; margin-bottom: 8px; }
		p { margin-bottom: 8px; }
		ul { list-style-position: inside; margin-bottom: 8px; }
	}

	.menus {
		.menu.menuAccountPath { background: #252525; box-shadow: 0px 4px 16px rgb(0 0 0 / 20%), 0px 0px 0px 1px #393933 inset; } 
		.menu.menuAccountPath {
			.label { color: $colorSecondary; }
			.label.path { color: #d4d4d4; }
		}
	}

	.tooltip { padding: 12px 16px; }
	.tooltip {
		ul { margin-top: 8px; }
	}
}

html.bodyAuthDeleted {
	#popupConfirm-innerWrap {
		.buttons { flex-direction: row-reverse; justify-content: space-between; width: 100%;}
	}
}

.pageAuth, .pageIndex {
	.frame { width: 672px; padding: 60px 48px 48px 48px; text-align: center; background: none !important; }
	.input { height: 40px; border: solid 1px $colorBorderDark; }

	.header { width: 100% !important; }
	.footer { width: 100% !important; }

	.icon.arrow.back {
		position: fixed; top: 50%; left: 46px; width: 16px; height: 44px; cursor: pointer; margin-top: -22px; background: url('~img/arrow/auth0.svg');
		z-index: 1;
	}
	.icon.arrow.back:hover { background: url('~img/arrow/auth1.svg'); }
	
	.authBackWrap { 
		position: absolute; top: 4px; left: 4px; display: flex; align-items: center; flex-wrap: nowrap; cursor: pointer; color: $colorDarkGrey; 
		line-height: 28px; padding: 0px 6px 0px 0px; border-radius: 4px;
	}
	.authBackWrap {
		.icon.back { width: 20px; height: 20px; background-size: 8px; background-image: url('~img/icon/popup/settings/back.svg'); transition: none; }
	}
	.authBackWrap:hover { background: $colorHoverMedium; }

	.textareaWrap { margin: 0px 0px 32px 0px; }
	.iconObject { margin-bottom: 12px; }

	.buttons { display: flex; flex-direction: column; align-items: center; gap: 12px 0px; }
	.button { width: 192px; }
	.button.blank { border-color: #1e1e1c; }
	.button.blank:hover { border-color: #272723; background: none; }

	.withError { background: #240e07; }
}

.pageIndexIndex, .pageAuthSelect {
	.frame { width: 830px; }
	.title { font-family: 'Riccione'; font-size: 102px; line-height: 90px; letter-spacing: -3px; font-weight: 500; margin-bottom: 24px; }
	.label { font-size: 16px; line-height: 26px; letter-spacing: -0.28px; width: 448px; margin: 0px auto 22px auto; }
}

.pageAuthLogin {
	.form { width: 100%; }
	.icon { height: 20px; width: 20px; }
	.phraseWrapper { margin: 0px 0px 20px 0px; }

	.small { color: $colorSecondary; cursor: pointer; }
	.small:hover { color: #cbc9bd; }

	.bottom { 
		position: fixed; bottom: 24px; left: 0; right: 0; display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 0px 6px;
		opacity: 0.6;
	}
	.bottom {
		.icon { background-image: url('~img/icon/footer/gear0.svg'); }
	}
	.bottom:hover {
		.icon { background-image: url('~img/icon/footer/gear1.svg'); }
	}
}

.pageAuthInvite {
	.frame { padding: 64px; }
	.input { text-align: center; border: solid 0px; border-bottom: solid 1px $colorBorderDark; font-family: 'Plex'; margin-bottom: 32px; }
}

.pageAuthPinCheck {
	.title { font-size: 22px; margin-bottom: 20px; }
	.input { width: 86px; height: 86px; border: none; border-radius: 24px; background: rgba(44, 43, 39, 0.3); margin-right: 8px; padding: 0px; text-align: center; vertical-align: top; font-size: 18px; }
	.input:last-child { margin: 0px; }
}

.pageAuthSetup {
	.title { margin: 0px; }
	.title.withLabel { margin-bottom: 22px; }
	.button { width: auto; }

	.importBackupWrap { text-align: left; }
	.importBackupWrap {
		.title { @include text-header1; margin: 0px 0px 16px 0px; }
		.label { margin: 0px 0px 32px 0px; }
	}
}

.pageAuthAccountSelect {
	.frame { padding-bottom: 48px; }
}

.pageAuthOnboard, .pageAuthInvite, .pageAuthLogin, .pageAuthDeleted {
	.frame { width: 866px; margin-top: -150px !important; display: flex; flex-direction: column; gap: 12px 0px; align-items: center; }
	.title { font-size: 18px; line-height: 26px; }
	.label { color: #5c5a54; }
}

.pageAuthOnboard {
	canvas { height: 100vh; width: 100vw; }
	.fadeInOverlay {
		animation: fadeIn 2s 1; background: black; position: absolute; top: 0; left: 0;
		height: 100vh; width: 100vw; z-index: 3; opacity: 0; pointer-events: none;
	}
	@keyframes fadeIn {
		0% { opacity: 1;  }
		100% { opacity: 0; }
	  }

	.label { width: 415px; }
	.button { min-width: 192px; width: auto; }

	.icon.gear { background-image: url('~img/icon/footer/gear0.svg'); height: 20px; width: 20px; }
	.small { color: $colorSecondary; cursor: pointer; }
	.small:hover { color: #cbc9bd; }

	#accountPath { display: flex; align-items: center; flex-direction: row; gap: 0px 6px; }
	#accountPath:hover { color: #cbc9bd; }
	#accountPath:hover {
		.icon.gear { background-image: url('~img/icon/footer/gear1.svg'); }
	}

	.bottom { position: fixed; bottom: 24px; left: 0; right: 0; display: flex; flex-direction: row; justify-content: center; align-items: center; }
	.questionMark { border-radius: 100%; width: 16px; height: 16px; font-size: 13px; line-height: 16px; display: inline-block; background-color: #5c5a54; color: black; }
	.input { border-radius: 26px; border: none; background: rgba(44, 43, 39, 0.3); font-size: 18px; padding: 32px 48px 32px 48px; width: 392px; height: auto; }
	.input:hover { cursor: pointer; background: rgba(44, 43, 39, 0.5); }
	.input::placeholder { color: #5c5a54 !important; }

	.phraseWrapper {
		.icon { display: none; }
	}

	.soulContent { position: relative; width: 100px; padding-top: 5px; }
	.soulContent {
		.account, .space, .line { transition: all 600ms ease-in; position: absolute; display: flex; flex-direction: column; }
		.account, .space { align-items: center; gap: 12px; width: 100px; top: 0; left: 0; }
		.account { z-index: 2; }
		.space { transition: all 600ms ease-in, opacity 200ms ease-in; z-index: 1; opacity: 0; }
		.iconObject.withOption.isSpace { background: white }
		
		.line { z-index: 0; height: 1px; top: 25px; width: 0; background: white; }
		.line.left { right: 50%; }
		.line.right { left: 50%; }
		.iconObject { margin: 0; }
		.accountName, .spaceName { text-overflow: ellipsis; overflow: hidden; width: 100px; }
	}

	.soulContent.soulCreating {
		.iconObject { background: white; box-shadow: 0px 0px 0px 0px white; animation: pulse 2s infinite; }

		@keyframes pulse {
			0% { transform: scale(1); }
			70% { transform: scale(1.05); }
			100% { transform: scale(1); }
		}
	}

	.soulContent.spaceCreating {
		.account { transform: translateX(-100px); }
		.space { transform: translateX(100px); opacity: 1; }
		.line { width: 100px; }
	}
}

.pageAuthDeleted {
	canvas { height: 100vh; width: 100vw; }
	.title { color: #cbc9bd }
	.frame { width: 500px; }
	.label { font-size: 16px;}
	.pie {
		.inner { display: inline-block; padding: 8px; border: 1px solid #5c5a54; border-radius: 100%; width: 64px; height: 64px; }
	}

	.buttons { margin: 16px;}
	.button { color: #cbc9bd }
	.remove { color: $colorRed; font-weight: 500; font-size: 16px; cursor: pointer; }

	.row { 
		padding: 18px 0px 17px 0px; border-bottom: 1px solid $colorBorderLight; cursor: pointer; position: relative; 
		@include text-paragraph; line-height: 28px;
	}
	.row.red { color: $colorRed; }
}

